# splortshub-1

./: Procfile  README.rst  pyproject.toml  requirements.txt
splortshub/: client.py  main.py  tracing.py
splortshub/routers/: players.py  status.py  teams.py
tests/: test_splortshub.py
